# AdventOfCode2018

./: .gitignore  CMakeLists.txt  README.md  readme.md
Day01/: main.cpp  readme.md
Day02/: readme.md
Day03/: main.cpp
Day04/: main.cpp
Day05/: main.cpp  mainp1.cpp  test.txt
Day08/: main.cpp
Day09/: input.txt  main.cpp
Day11/: main.cpp
Day14/: instructions.txt  testP1.txt  testP2.txt
Day15/: main.cpp  testP2-5.txt
Day17/: main.cpp
Day18/: main.cpp
Day19/: operations.cpp
Day20/: compare.py  main.cpp  test2.txt  test8.txt
Day22/: main.cpp
include/: operations.h
src/Day01/: sellersgrant.cpp
src/Day02/: sellersgrant.cpp
src/Day03/: sellersgrant.cpp
src/Day04/: sellersgrant.cpp
src/Day05/: sellersgrant.cpp
src/Day06/: sellersgrant.cpp
src/Day07/: sellersgrant.cpp
src/Day08/: sellersgrant.cpp
src/Day09/: sellersgrant.cpp
src/Day10/: sellersgrant.cpp
src/Day11/: sellersgrant.cpp
src/Day12/: sellersgrant.cpp
src/Day13/: sellersgrant.cpp
src/Day14/: sellersgrant.cpp
src/Day15/: sellersgrant.cpp
src/Day16/: sellersgrant.cpp
src/Day17/: sellersgrant.cpp
src/Day18/: sellersgrant.cpp
src/Day19/: sellersgrant.cpp
src/Day20/: mainOld.cpp  sellersgrant.cpp
src/Day21/: sellersgrant.cpp
src/Day22/: sellersgrant.cpp
src/Day23/: sellersgrant.cpp
src/Day24/: sellersgrant.cpp
src/Day25/: sellersgrant.cpp
